<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="test">测试%d测试</string>
	
    <string name="app_name">压缩密码破解大师</string>
    
	<string name="menu">菜单</string>
	<string name="ok">确认</string>
	<string name="delete">删除</string>
	<string name="cancel">取消</string>
	<string name="feedback">意见反馈</string>
	<string name="feedback_send">发送</string>
	<string name="feedback_sending">发送中</string>
	<string name="feedback_send_success_toast">您的意见已发送至我们的服务器，我们将会努力优化软件！</string>
	<string name="feedback_send_success_button">成功</string>
	<string name="feedback_send_faith">失败</string>
	<string name="feedback_send_error_notInputAll">请填写完整哦！</string>
	<string name="feedback_send_error_InternetNotOpen">联网失败，请检查网络连接哦！</string>
	<string name="feedback_edit_hint_message">请在这输入您的反馈意见</string>
	<string name="feedback_edit_hint_attach_way">留下您的联系方式，以便我们联系您</string>
	
	<string name="postkey_title">上传密码</string>
	<string name="postkey_post">上传</string>
	<string name="postkey_posting">上传中</string>
	<string name="postkey_post_faith">失败</string>
	<string name="postkey_post_success">您的密码已成功上传！</string>
	<string name="postkey_send_error_notInput">请填写密码哦！</string>
	<string name="postkey_send_error_InternetNotOpen">联网失败，请检查！</string>
	<string name="postkey_edit_hint_message">填写密码</string>
	<string name="postkey_tv_introduce_text">上传密码可用于自身密码备份，丰富云密码库</string>
	
	<string name="MainActivity_BackClickExitToast">再按一下退出</string>
	<string name="MainActivity_FileClick_delete">删除</string>
	<string name="MainActivity_FileClick_open">打开</string>
	<string name="MainActivity_FileClick_pojie">破解</string>
	<string name="MainActivity_FileClick_share">分享</string>
	<string name="MainActivity_sdcard0">内置储存</string>
	<string name="MainActivity_sdcard1">外置储存</string>
	<string name="MainActivity_usbotg">OTG挂载设备</string>
	<string name="MainActivity_delete_text">您确认删除该文件么？删除后可能无法恢复！</string>
	
	<string name="MainActivity_Exit_Message">是否退出？</string>
	<string name="MainActivity_Exit_button_exit">退出</string>
	<string name="MainActivity_Exit_button_donate">支持我们</string>
	
	<string name="Help">帮助</string>
	<string name="About">关于</string>
	
	<string name="donate_title">支持团队</string>
	<string name="donate_ad_text">下载应用</string>
	<string name="donate_alipay_text">捐赠</string>
	<string name="donate_alipay_count">测试支付宝</string>
	<string name="donate_alipay_dialogTV">我们的支付宝账号()已复制至手机粘贴板，请自行使用支付宝对我们捐赠！</string>
	<string name="donate_personD_text">人员支持</string>
	<string name="donate_introduce_text">感谢您的支持，您可以通过以下三种方式帮助我们。
		\n<b>下载应用</b>
		\n\t\twifi环境下，您可以通过下载重点推荐的应用Netpas云墙以及今日推荐中的任意一个应用，并在两个应用都安装完成后打开Netpas云墙运行一次来为我们带来2.5元的应用推广收益。而如果您原本就安装有今日推荐中包含的应用则可不必再一次下载安装，Netpas云墙也可以为您已安装的应用带来网络加速效果。
		\n<b>捐赠</b>
		\n\t\t您可以通过支付宝直接转账给我们，也可以通过QQ转账给粉丝群的群主。
		\n<b>人员支持</b>
		\n\t\t如果您愿意加入我们，为我们的工作提供技术帮助，可以直接点击“人员支持”的按钮添加工作室负责人为好友。</string>
	<string name="donate_personD_DialogMasseage">测试</string>
	
	<string name="updata_VersionIsNewest">版本已是最新！</string>
	<string name="update_VersionIsIgnored">该版本已被忽略</string>
	<string name="update_IsChecking">正在检查更新……</string>
	<string name="update_CheckFailed">检查失败</string>
	
	<string name="cracksetting_title">破解预设置</string>
	<string name="cracksetting_start">开始</string>
	<string name="cracksetting_crackway">破解方式</string>
	<string name="cracksetting_flashcrack">云秒破</string>
	<string name="cracksetting_flashcrack_introduce">云秒破说明</string>
	<string name="cracksetting_dictionary">云字典</string>
	<string name="cracksetting_dictionary_introduce">云字典说明</string>
	<string name="cracksetting_violencecrack">暴力破解</string>
	<string name="cracksetting_violencecrack_introduce">暴力破解说明</string>
	<string name="cracksetting_violencecrack_setting">暴力破解设置</string>
	<string name="cracksetting_violencecracksetting_keylength">密码长度:</string>
	<string name="cracksetting_violencecracksetting_to">到</string>
	<string name="cracksetting_violencecracksetting_stringgroup">字符集组:</string>
	<string name="cracksetting_violencecracksetting_stringgroup_number">数字</string>
	<string name="cracksetting_violencecracksetting_stringgroup_symbol">字符</string>
	<string name="cracksetting_violencecracksetting_stringgroup_upercase">大写字母</string>
	<string name="cracksetting_violencecracksetting_stringgroup_lowercase">小写字母</string>
	<string name="cracksetting_violencecracksetting_useprefix">使用前缀:</string>
	<string name="cracksetting_violencecracksetting_usesuffix">使用后缀:</string>
	<string name="cracksetting_violencecracksetting_notuseprefix">不使用前缀</string>
	<string name="cracksetting_violencecracksetting_notusesuffix">不使用后缀</string>
	<string name="cracksetting_startbutton_tips_wayNotChecked">请至少选择一项破解方式！</string>
	<string name="cracksetting_startbutton_tips_stringGroupNotChecked">必须选择一种字符集组哦！</string>
	
	<string name="cracking_title">破解中……</string>
	<string name="cracking_pause">暂停</string>
	<string name="cracking_resume">继续</string>
	<string name="cracking_file_name">文件:</string>
	<string name="cracking_file_path">路径:</string>
	<string name="cracking_crack_status">破解状态:</string>
	<string name="cracking_crack_way">当前方式:</string>
	<string name="cracking_crack_process">当前进度:</string>
	<string name="cracking_bottom_tv">(软件名)正在为您破解，请耐心等待！</string>
	
	<string name="crack_result_success_dialog_title">破解成功</string>
	<string name="crack_result_success_dialog_message" formatted="false">恭喜，文件已破解成功( •̀∀•́ )
		\n用时:%s小时%s分%s秒
		\n密码:%s
		\n感谢您使用我们的软件，密码已复制到手机粘贴板，您可以使用第三方解压软件粘贴密码进行解压，当然，我们强烈建议您支持下我们努力的成功( •̀∀•́ )</string>
	<string name="crack_result_fail_dialog_title">破解失败</string>
	<string name="crack_result_fail_dialog_message">对不起，文件破解失败了(ಥ_ಥ)\n在此，我们建议您通过关于中的联系方式联系我们\n最后，如果您有什么解压密码，我们欢迎您通过菜单项的上传密码分享给大家</string>
	<string name="crack_result_button_text_donate">支持我们</string>
	<string name="crack_result_button_text_about">联系我们</string>
	<string name="crack_result_button_text_close">关闭</string>
	
	
	
</resources>
