<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:background="@color/bar_color"
	android:id="@+id/postkeyLinearLayoutAdapter">

	<LinearLayout
		android:layout_height="match_parent"
		android:layout_width="match_parent"
		android:orientation="vertical"
		android:background="#FFFFFF">

		<RelativeLayout
			android:layout_height="50dip"
			android:layout_width="match_parent"
			android:background="@color/bar_color"
			android:gravity="center_vertical">

			<ImageButton
				android:layout_height="26dp"
				android:layout_width="29dp"
				android:src="@drawable/back"
				android:background="#00000000"
				android:layout_centerVertical="true"
				android:scaleType="fitXY"
				android:layout_marginRight="17dp"
				android:id="@+id/postkeyImageButtonBackButton"
				android:layout_marginLeft="19dp"/>

			<TextView
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:layout_width="wrap_content"
				android:text="@string/postkey_title"
				android:layout_toRightOf="@id/postkeyImageButtonBackButton"
				android:layout_centerVertical="true"
				android:textSize="22dp"
				android:singleLine="true"
				android:id="@+id/postkeyTextViewTitleTV"
				android:textColor="@color/titlebar_title_color"/>

			<Button
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:text="@string/postkey_post"
				android:layout_alignParentRight="true"
				android:background="#00000000"
				android:textColor="@color/titlebar_title_color"
				android:textSize="19dp"
				android:id="@+id/postkeyButtonSend"/>

		</RelativeLayout>

		<EditText
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:ems="10"
			android:layout_margin="22dp"
			android:singleLine="true"
			android:id="@+id/postkeyEditTextMessage"
			android:hint="@string/postkey_edit_hint_message"
			android:background="@drawable/feedback_edit_bg"
			android:textSize="16dp"/>

		<TextView
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/postkey_tv_introduce_text"
			android:layout_marginLeft="22dp"
			android:layout_marginRight="22dp"
			android:textSize="13dp"/>

	</LinearLayout>

</LinearLayout>

