<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:background="@color/bar_color"
	android:id="@+id/crackviewLinearLayoutAdapter">

	<LinearLayout
		android:layout_height="match_parent"
		android:layout_width="match_parent"
		android:orientation="vertical"
		android:background="#FFFFFF">

		<RelativeLayout
			android:layout_height="50dip"
			android:layout_width="match_parent"
			android:background="@color/bar_color"
			android:gravity="center_vertical">

			<ImageView
				android:layout_height="26dp"
				android:layout_width="29dp"
				android:background="#00000000"
				android:layout_centerVertical="true"
				android:scaleType="fitXY"
				android:layout_marginRight="17dp"
				android:id="@+id/crackviewImageViewProgressCircus"
				android:layout_marginLeft="19dp"/>

			<TextView
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:layout_width="wrap_content"
				android:text="@string/cracking_title"
				android:layout_toRightOf="@id/crackviewImageViewProgressCircus"
				android:layout_centerVertical="true"
				android:textSize="22dp"
				android:singleLine="true"
				android:textColor="@color/titlebar_title_color"/>

			<Button
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:text="@string/cracking_pause"
				android:layout_alignParentRight="true"
				android:background="#00000000"
				android:textColor="@color/titlebar_title_color"
				android:textSize="19dp"
				android:id="@+id/crackviewButtonPauseAndResume"/>

		</RelativeLayout>

		<LinearLayout
			android:layout_height="match_parent"
			android:layout_width="match_parent"
			android:orientation="vertical"
			android:padding="10dp">

			<TableLayout
				android:layout_height="wrap_content"
				android:layout_width="match_parent">

				<TableRow
					android:layout_height="wrap_content"
					android:layout_width="wrap_content">

					<TextView
						android:layout_height="wrap_content"
						android:layout_width="wrap_content"
						android:text="@string/cracking_file_name"/>

					<TextView
						android:layout_height="wrap_content"
						android:layout_width="wrap_content"
						android:text="Text"
						android:id="@+id/crackviewTextViewFileName"/>

				</TableRow>

				<TableRow
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:paddingBottom="10dp">

					<TextView
						android:layout_height="wrap_content"
						android:layout_width="wrap_content"
						android:text="@string/cracking_file_path"/>

					<TextView
						android:layout_height="wrap_content"
						android:layout_width="wrap_content"
						android:id="@+id/crackviewTextViewFilePath"/>

				</TableRow>

			</TableLayout>

			<LinearLayout
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:orientation="horizontal">

				<TextView
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:text="@string/cracking_crack_status"/>

				<TextView
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:text="Text"
					android:id="@+id/crackviewTextViewCrackStatus"/>

			</LinearLayout>

			<LinearLayout
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:orientation="horizontal"
				android:paddingTop="10dp">

				<TextView
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:text="@string/cracking_crack_way"/>

				<TextView
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:text="Text"
					android:id="@+id/crackviewTextViewCrackUseWay"/>

			</LinearLayout>

			<RelativeLayout
				android:layout_height="match_parent"
				android:layout_width="match_parent"
				android:paddingTop="25dp">

				<ScrollView
					android:layout_height="match_parent"
					android:layout_width="match_parent"
					android:layout_alignParentBottom="true"
					android:foregroundGravity="bottom"
					android:paddingBottom="60dp"
					android:id="@+id/crackviewScrollViewProgressLayout"
					android:paddingTop="45dp"
					android:scrollbarAlwaysDrawHorizontalTrack="false"
					android:scrollbars="none">
					>

					<TextView
						android:layout_height="match_parent"
						android:layout_width="match_parent"
						android:text="Text"
						android:gravity="bottom"
						android:id="@+id/crackviewTextViewProgressTv"
						android:padding="20dp"/>

				</ScrollView>

				<TextView
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:text="@string/cracking_bottom_tv"
					android:layout_alignParentBottom="true"
					android:layout_centerHorizontal="true"
					android:gravity="center"/>

			</RelativeLayout>

		</LinearLayout>

	</LinearLayout>

</LinearLayout>

