<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:background="@color/bar_color"
	android:id="@+id/donateLinearLayoutAdapter">

	<LinearLayout
		android:layout_height="match_parent"
		android:layout_width="match_parent"
		android:orientation="vertical"
		android:background="#FFFFFF">

		<RelativeLayout
			android:layout_height="50dip"
			android:layout_width="match_parent"
			android:background="@color/bar_color"
			android:gravity="center_vertical">

			<ImageButton
				android:layout_height="26dp"
				android:layout_width="29dp"
				android:src="@drawable/back"
				android:background="#00000000"
				android:layout_centerVertical="true"
				android:scaleType="fitXY"
				android:layout_marginRight="17dp"
				android:id="@+id/donateImageButtonBackButton"
				android:layout_marginLeft="19dp"/>

			<TextView
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:layout_width="wrap_content"
				android:text="@string/donate_title"
				android:layout_toRightOf="@id/donateImageButtonBackButton"
				android:layout_centerVertical="true"
				android:textSize="22dp"
				android:singleLine="true"
				android:id="@+id/donateTextViewTitleTV"
				android:textColor="@color/titlebar_title_color"/>

		</RelativeLayout>

		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:orientation="horizontal"
			android:layout_marginTop="10dp"
			android:padding="10dp">

			<LinearLayout
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:orientation="vertical"
				android:gravity="center_horizontal"
				android:layout_margin="1dp">

				<ImageButton
					style="?android:attr/buttonBarButtonStyle"
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:src="@drawable/donate_download"
					android:background="@drawable/donate_image_bg"
					android:id="@+id/donateImageButtonAD"
					android:scaleType="centerInside"/>

				<TextView
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:text="@string/donate_ad_text"
					android:layout_marginTop="5dp"/>

			</LinearLayout>

			<LinearLayout
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:orientation="vertical"
				android:gravity="center_horizontal"
				android:layout_margin="1dp">

				<ImageButton
					style="?android:attr/buttonBarButtonStyle"
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:src="@drawable/donate_alipay"
					android:background="@drawable/donate_image_bg"
					android:id="@+id/donateImageButtoAliPay"
					android:scaleType="centerInside"/>

				<TextView
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:text="@string/donate_alipay_text"
					android:layout_marginTop="5dp"/>

			</LinearLayout>

			<LinearLayout
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:orientation="vertical"
				android:gravity="center_horizontal"
				android:layout_margin="1dp">

				<ImageButton
					style="?android:attr/buttonBarButtonStyle"
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:src="@drawable/donate_person"
					android:background="@drawable/donate_image_bg"
					android:id="@+id/donateImageButtonPersonD"
					android:scaleType="centerInside"/>

				<TextView
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:text="@string/donate_personD_text"
					android:layout_marginTop="5dp"/>

			</LinearLayout>

		</LinearLayout>

		<TextView
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/donate_introduce_text"
			android:layout_marginLeft="22dp"
			android:layout_marginRight="22dp"
			android:textSize="14dp"/>

	</LinearLayout>

</LinearLayout>

